# Innotter

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  entrypoint_celery.sh  pyproject.toml
innotter/: manage.py
innotter/authentication/: admin.py  permissions.py  service.py  tasks.py  urls.py  views.py
innotter/authentication/tests/: test_jwt.py  test_permissions.py
innotter/aws/: s3_service.py  ses_service.py
innotter/innotter/: __init__.py  asgi.py  celery.py  producer.py  settings.py  urls.py  wsgi.py
innotter/pages/: admin.py  models.py  permissions.py  serializers.py  service.py  urls.py  views.py
innotter/pages/migrations/: 0001_initial.py
innotter/pages/tests/: fixtures.py  test_pages_crud.py  test_statistics.py  test_subscriptions.py
innotter/posts/: admin.py  models.py  permissions.py  serializers.py  service.py  tasks.py  urls.py  views.py
innotter/posts/migrations/: 0001_initial.py
innotter/posts/tests/: test_posts_crud.py
innotter/tests/: conftest.py
